# pycln

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  CODE_OF_CONDUCT.md  LICENSE  README.md  codecov.yml  pyproject.toml  setup.py
.github/: ci_status.py  codecov.yml  dependabot.yml  stale.yml  tea configuration file  test_ci_status.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  fuzz.yml  pre-commit.yml
docs/: .nojekyll  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  _coverpage.md  _navbar.md  _sidebar.md  index.html
docs/_media/: pycln-logo.ai
docs/plugins/: docsify_edit.js  edit_button.js
pycln/: __init__.py  __main__.py  cli.py  lib.py
pycln/utils/: __init__.py  _exceptions.py  _nodes.py  ast2source.py  astu.py  config.py  cstu.py  exceptions.py  iou.py  nodes.py  pathu.py  py38_nodes.py  refactor.py  regexu.py  report.py  scan.py  transform.py
scripts/: dev-install.sh  dev-uninstall.sh  fuzz_testing.sh  hooks-autoupdate.sh  install.sh  tests_runner.sh  uninstall.sh
tests/: __init__.py  fuzz.py  test_cli.py  test_config.py  test_integration.py  test_iou.py  test_main.py  test_metadata.py  test_nodes.py  test_pathu.py  test_pycln.py  test_refactor.py  test_regexu.py  test_report.py  test_scan.py  test_transform.py
tests/config/: .gitignore  invalid_type.invalid  pycln.yml  pyproject.toml  settings.json  setup.cfg  symlink.invalid
tests/data/config/: cli.cfg  pycln.yaml  pycln.yml  pyproject.toml  settings.json  setup.cfg  setup[0].cfg  setup[1].cfg  setup[2].cfg
tests/data/paths/dir/: r.py
tests/utils/: __init__.py  std.py  sysu.py  test_std.py  test_sysu.py
