[tool.poetry]
name = "pycln"
version = "0.0.5"
description = "A formatter for finding and removing unused import statements."
authors = ["Hadi Alqattan <alqattanhadizaki@gmail.com>"]
homepage = "https://hadialqattan.github.io/pycln"
repository = "https://github.com/hadialqattan/pycln"
keywords = ["formatter", "linter", "quality-assurance", "tools", "cli"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities"]
license = "MIT"
readme = "README.md"
include = ["pyproject.toml"]

[tool.poetry.scripts]
pycln = "pycln.cli:app"

[tool.poetry.dependencies]
python = ">=3.6.2, <3.10"
typer = "^0.3.1"
toml = "^0.10.1"
pathspec = "^0.8.0"
dataclasses = {version = "^0.7", python = "3.6"}
libcst = "^0.3.10"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
requests = "^2.24.0"
semver = "^2.10.2"
pytest = "^5.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
pytest-randomly = "^3.4.1"
oschmod = "^0.3.9"
black = {version = "^21.6b0", allow-prereleases = true}

# Pre-commit hooks related config.
[tool.pycln]
all = true

[mypy]
ignore_missing_imports = true
no_strict_optional = true

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
