[tool.poetry]
name = "pycln"
version = "2.1.6"
description = "A formatter for finding and removing unused import statements."
authors = ["Hadi Alqattan <alqattanhadizaki@gmail.com>"]
homepage = "https://hadialqattan.github.io/pycln"
repository = "https://github.com/hadialqattan/pycln"
keywords = ["formatter", "linter", "quality-assurance", "tools", "cli"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities"]
license = "MIT"
readme = "README.md"
include = ["pyproject.toml"]
packages = [{ include = "pycln" }, { include = "vendor" }]

[tool.poetry.scripts]
pycln = "pycln.cli:app"

[tool.poetry.dependencies]
python = ">=3.6.2, <4"
typer = ">=0.4.1,<0.10.0"
dataclasses = {version = "^0.7", python = "3.6"}
pyyaml = ">=5.3.1,<7.0.0"
pathspec = ">=0.9.0,<0.12.0"
tomlkit = "^0.11.1"
libcst = [{version = ">=0.3.10,<0.5.0", python = ">=3.7"}, {version = ">=0.3.10,<0.4.0", python = "<3.7"}]

[tool.poetry.dev-dependencies]
requests = "^2.24.0"
semver = "^2.10.2"
pytest = "^7.0"
pytest-cov = "^4.0.0"
pytest-randomly = "^3.4.1"
oschmod = "^0.3.9"
hypothesmith = "^0.2.0"

# Pre-commit hooks related config.
[tool.pycln]
all = true

[mypy]
show_error_codes = true
ignore_missing_imports = true
no_strict_optional = true

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 88

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
