[tool.poetry]
name = "pycln"
version = "2.5.0"
description = "A formatter for finding and removing unused import statements."
authors = ["Hadi Alqattan <alqattanhadizaki@gmail.com>"]
homepage = "https://hadialqattan.github.io/pycln"
repository = "https://github.com/hadialqattan/pycln"
keywords = ["formatter", "linter", "quality-assurance", "tools", "cli"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pycln" }, { include = "vendor" }]

[tool.poetry.scripts]
pycln = "pycln.cli:app"

[tool.poetry.dependencies]
python = ">=3.8, <4"
typer = ">=0.4.1"
pyyaml = ">=5.3.1"
pathspec = ">=0.9.0"
tomlkit = ">=0.11.1"
libcst = ">=0.3.10"

[tool.poetry.group.dev.dependencies]
requests = "^2.24.0"
semver = ">=2.10.2,<4.0.0"
pytest = "^7.0"
pytest-cov = "^4.0.0"
pytest-randomly = "^3.4.1"
oschmod = "^0.3.9"
hypothesmith = "^0.3.3"
pre-commit = {version = "^3.0.0", python = ">=3.8"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Pre-commit hooks related config.
[tool.pycln]
all = true

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 88
